# serializer version: 1
# name: TestRawSessionsModel.test_ad_ids_map_and_set
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_autocapture_does_not_set_attribution_when_pageview_present
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_autocapture_does_set_attribution_when_only_event
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_channel_type_properties
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_counts_pageviews_autocaptures_and_events
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_handles_different_distinct_id_across_same_session
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_handles_entry_and_exit_urls
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_handles_initial_utm_properties
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_it_creates_session_when_creating_event
  '''
  
  select session_id_v7,
         team_id
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_lookup_feature_flag
  '''
  
  select session_id_v7,
         has(flag_values['$feature/flag_string'], 'f1_a') as has_f1_a,
         has(flag_values['$feature/flag_string'], 'f1_b') as has_f1_b,
         has(flag_values['$feature/flag_string'], 'f1_c') as has_f1_c
  from raw_sessions_v3_v
  where team_id = 99999
  ORDER BY session_id_v7
  '''
# ---
# name: TestRawSessionsModel.test_max_inserted_at
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_select_from_sessions
  '''
  
  SELECT session_id_v7,
         team_id,
         min_timestamp,
         max_timestamp,
         urls
  FROM raw_sessions_v3
  WHERE session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_select_from_sessions_mv
  '''
  
  SELECT session_id_v7,
         team_id,
         min_timestamp,
         max_timestamp,
         urls
  FROM raw_sessions_v3_mv
  WHERE session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_separates_sessions_across_same_user
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_separates_sessions_across_same_user.1
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_separates_sessions_across_same_user.2
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_store_all_feature_flag_values
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
# name: TestRawSessionsModel.test_tracks_all_distinct_ids
  '''
  
  select *
  from raw_sessions_v3_v
  where session_id_v7 = toUInt128(toUUID('00000000-0000-0000-0000-000000000000'))
    AND team_id = 99999
  '''
# ---
